--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start-prod": "NODE_ENV=production node ./src/server.js",
     "start": "nodemon ./src/server.js",
     "lint": "eslint ./src"
   },
@@ -17,6 +18,7 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
-    "@hapi/hapi": "^21.3.2"
+    "@hapi/hapi": "^21.3.2",
+    "nanoid": "^3.3.6"
   }
 }
